# accrue

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: release.md  ship-issue.md  sync-docs.md  triage-issues.md
.claude/hooks/: lint-changed.sh
.claude/skills/accrue/: SKILL.md
.claude/skills/accrue/references/: api.md  patterns.md  prompts.md  providers.md
.claude/skills/release/: SKILL.md
.claude/skills/ship-issue/: SKILL.md
.claude/skills/sync-docs/: SKILL.md
.claude/skills/triage-issues/: SKILL.md
.github/scripts/: triage_issue.py
.github/workflows/: accrue-triage.yml  claude-review.yml  claude.yml  publish.yml  test.yml  weekly-maintenance.yml
accrue/: __init__.py  providers.py
accrue/core/: __init__.py  cache.py  checkpoint.py  config.py  enricher.py  exceptions.py  hooks.py
accrue/data/: __init__.py  fields.py
accrue/pipeline/: __init__.py  pipeline.py  plan.py  report.py
accrue/schemas/: base.py  grounding.py
accrue/steps/: llm.py  prompt_builder.py  schema_builder.py
accrue/steps/providers/: __init__.py  anthropic.py  base.py  google.py  openai.py
accrue/utils/: logger.py  web_search.py
docs/: index.md
docs/cookbook/: batch-processing.md  company-enrichment.md  content-analysis.md  lead-scoring.md
docs/decisions/: 014-batch-api-support.md
docs/designs/: batch-api-support.md
docs/getting-started/: claude-code-skill.md  core-concepts.md  installation.md  quickstart.md
docs/guides/: batch-api.md  caching.md  conditional-steps.md  configuration.md  error-handling.md  field-specifications.md  function-steps.md  hooks.md  plan-mode.md  providers.md  report.md  web-search.md
docs/instructions/: PIPELINE_DESIGN.md
docs/reference/: api.md
examples/: README.md  advanced_pipeline.ipynb  batch_enrichment.py  field_categories.csv  quickstart.ipynb  quickstart.py  sample_data.csv
tests/: conftest.py  test_batch_anthropic.py  test_batch_foundation.py  test_batch_openai.py  test_batch_pipeline.py  test_cache.py  test_cache_integration.py  test_checkpoint.py  test_conditional_steps.py  test_enricher.py  test_error_handling.py  test_function_step.py  test_grounding.py  test_hooks.py  test_llm_step.py  test_pipeline.py  test_pipeline_run.py  test_plan.py  test_prompt_builder.py  test_providers.py  test_report.py  test_save.py  test_schema_builder.py  test_web_search.py
tests/integration/: test_anthropic_pipeline_batch.py  test_batch_anthropic_e2e.py  test_batch_e2e.py  test_batch_mechanics.py  test_batch_mixed_pipeline.py  test_batch_openai.py  test_batch_poll_existing.py  test_batch_submit_verify.py  test_provider_kwargs.py  test_realtime_baseline.py  test_thinking_models.py
